fixed header links spacing

--- a/React-WordPress/scss/modules/_header.scss
+++ b/React-WordPress/scss/modules/_header.scss
@@ -755,7 +755,7 @@
     .nav--center{
        margin:auto;
        text-align: center;
-       justify-content: space-between;
+       justify-content: center;
        li{
            margin: auto 0.5em;
        }
